# fastapi-starter-template

./: .env  .gitignore  README.md  alembic.ini  pyproject.toml
app/: main.py
app/apis/: api.py
app/apis/item/: api.py  crud.py  models.py  schemas.py
app/config/: settings.py
app/db/: base.py  session.py
migrations/: env.py
migrations/versions/: d277b5881619_create_starter_models.py
