[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["anujdevrani140707@gmail.com"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.2"
alembic = "^1.6.5"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
mysqlclient = "^2.0.3"
SQLAlchemy = "^1.4.18"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
